# garfield-extension

./: .swamp.yaml  README.md  manifest.yaml
benchmarking/: .gitignore  README.md  pyproject.toml
benchmarking/calibration/: README.md  current-runtime.events.jsonl  current-runtime.json
benchmarking/cases/contained-dry-run/: fixture.patch  oracle.json  prompt.md  solution.patch
benchmarking/cases/payment-idempotency/: fixture.patch  oracle.json  prompt.md  solution.patch
benchmarking/ledgerlite/: .swamp.yaml  AGENTS.md  README.md  go.mod
benchmarking/ledgerlite/api/: openapi.json
benchmarking/ledgerlite/cmd/ledgerctl/: main.go  main_test.go
benchmarking/ledgerlite/internal/api/: handler.go  handler_test.go
benchmarking/ledgerlite/internal/audit/: audit.go
benchmarking/ledgerlite/internal/invoice/: invoice.go  service.go  service_test.go
benchmarking/ledgerlite/internal/payment/: payment.go  service.go  service_test.go
benchmarking/ledgerlite/internal/store/: memory.go  (+1 more)
benchmarking/ledgerlite/policies/: api-compatibility.md  generated-code.md  testing.md
benchmarking/ledgerlite/tools/: validate.sh
benchmarking/ledgerlite/workflows/: workflow-8d4adfff-d05f-453b-900c-a6e88fc5699e.yaml
benchmarking/results/: README.md  report.html  report.json  report.md
benchmarking/src/garfield_bench/: __init__.py  aggregate.py  app_server.py  blind.py  cli.py  grading.py  models.py  report.py  runner.py  telemetry.py  workspace.py
benchmarking/tests/: test_adapters.py  test_blind.py  test_report.py  test_runner.py  test_telemetry.py  test_workspace.py
(+33 files in other folders)
