[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "garfield-bench"
version = "0.1.0"
description = "Garfield skill and workflow implementation benchmark"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
garfield-bench = "garfield_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
